Fixes continue shopping button
was overlapping footer

--- a/css/ecommerce.less
+++ b/css/ecommerce.less
@@ -1050,6 +1050,8 @@
 
 // Proceed to checkout button
 
-button.btn.basket-summary-submit {
-    margin-bottom: 30px;
+button.btn.basket-summary-submit,
+.ecombasketsummary > .btn {
+	display: inline-block;
+	margin-bottom: 30px;
 }
